# VoxDrop

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  index.html  package-lock.json  package.json  project.md  tailwind.config.js
.github/workflows/: release.yml
memory/: CURRENT_TASK.md  DECISIONS.md  KNOWN_ISSUES.md  PROJECT.md
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs  paste.rs  windows_hotkey.rs
src/components/: MainView.tsx  PillView.tsx
src/lib/: groq.ts  platform.ts  sounds.ts  speech.ts  textCleanup.ts  updates.ts
