[package]
name = "tauri-appvoxdrop"
version = "0.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appvoxdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-os = "2.2.0"
cpal = "0.15"
hound = "3.5"
enigo = "0.1.3"
base64 = "0.22"
arboard = "3"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }
windows = { version = "0.58.0", features = ["Foundation", "Media_Control"] }
